--- a/bigdays.Rmd
+++ b/bigdays.Rmd
@@ -4,3 +4,7 @@ author: "Tim Holland"
 date: "2/5/2018"
 output: html_document
 ---
+
+```{r bars, include=TRUE, echo=FALSE,fig.width=10,fig.height=7}
+countsBars(myeb.area=myeb)
+```
